--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
 
   "description": "Provides a context menu for opening links as text/plain. A personal replacement for https://github.com/spasche/openinbrowser",
   "manifest_version": 2,
-  "name": "Open as text",
-  "version": "1.0",
+  "name": "Open as Text",
+  "version": "1.1",
   "icons": {
     "48": "icons/icon.svg"
   },
